enhance order udate db transaction logic
