# internal/handlers/product.go
@@ -6,6 +6,7 @@ import (
 	db "github.com/slamchillz/getinstashop-ecommerce-api/internal/db/sqlc"
 	"github.com/slamchillz/getinstashop-ecommerce-api/internal/services"
 	"github.com/slamchillz/getinstashop-ecommerce-api/internal/types"
+	"github.com/slamchillz/getinstashop-ecommerce-api/internal/utils"
 	"log"
 	"net/http"
 )
@@ -21,8 +22,8 @@ func NewProductHandler(store db.Store) *ProductHandler {
 }
 
 // CreateProduct godoc
-// @Summary      Create a new product
-// @Description  Create a new product
+// @Summary      Create a new product. Requires admin privilege
+// @Description  Create a new product. Requires admin privilege
 // @Tags         product
 // @Accept       json
 // @Produce      json
@@ -60,8 +61,8 @@ func (h *ProductHandler) CreateProduct(ctx *gin.Context) {
 }
 
 // GetAllProduct godoc
-// @Summary      List all products
-// @Description  List all products
+// @Summary      List all products. None admin users should be able to see products before placing an order.
+// @Description  List all products. None admin users should be able to see products before placing an order.
 // @Tags         product
 // @Accept       json
 // @Produce      json
@@ -69,7 +70,7 @@ func (h *ProductHandler) CreateProduct(ctx *gin.Context) {
 // @Failure      400  {object}  types.ProductError
 // @Failure      500  {object}  types.InterServerError
 // @Security	 BearerAuth
-// @Router       /admin/products [get]
+// @Router       /products [get]
 func (h *ProductHandler) GetAllProduct(ctx *gin.Context) {
 	var err error
 	response, errMessage, statusCode, err := h.productService.GetAllProduct(ctx)
@@ -90,8 +91,8 @@ func (h *ProductHandler) GetAllProduct(ctx *gin.Context) {
 }
 
 // GetOneProduct godoc
-// @Summary      Fetch One Product
-// @Description  Fetch One Product
+// @Summary      Fetch One Product. Requires admin privilege
+// @Description  Fetch One Product. Requires admin privilege
 // @Tags         product
 // @Accept       json
 // @Produce      json
@@ -103,7 +104,7 @@ func (h *ProductHandler) GetAllProduct(ctx *gin.Context) {
 // @Router       /admin/products/{productId} [get]
 func (h *ProductHandler) GetOneProduct(ctx *gin.Context) {
 	var err error
-	var productId uuid.UUID = uuid.UUID([]byte(ctx.Param("id")))
+	var productId uuid.UUID = utils.ParseStringToUUID(ctx.Param("id"))
 	response, errMessage, statusCode, err := h.productService.GetOneProduct(ctx, productId)
 	if err != nil {
 		ctx.JSON(statusCode, gin.H{
@@ -122,8 +123,8 @@ func (h *ProductHandler) GetOneProduct(ctx *gin.Context) {
 }
 
 // DeleteOneProduct godoc
-// @Summary      Fetch One Product
-// @Description  Fetch One Product
+// @Summary      Delete One Product. Requires admin privilege
+// @Description  Delete One Product. Requires admin privilege
 // @Tags         product
 // @Accept       json
 // @Produce      json
@@ -135,7 +136,7 @@ func (h *ProductHandler) GetOneProduct(ctx *gin.Context) {
 // @Router       /admin/products/{productId} [delete]
 func (h *ProductHandler) DeleteOneProduct(ctx *gin.Context) {
 	var err error
-	var productId uuid.UUID = uuid.UUID([]byte(ctx.Param("id")))
+	var productId uuid.UUID = utils.ParseStringToUUID(ctx.Param("id"))
 	_, errMessage, statusCode, err := h.productService.DeleteOneProduct(ctx, productId)
 	if err != nil {
 		ctx.JSON(statusCode, gin.H{
@@ -154,8 +155,8 @@ func (h *ProductHandler) DeleteOneProduct(ctx *gin.Context) {
 }
 
 // UpdateOneProduct godoc
-// @Summary      Update a single Product
-// @Description  Update a single Product
+// @Summary      Update a single Product. Requires admin privilege
+// @Description  Update a single Product. Requires admin privilege
 // @Tags         product
 // @Accept       json
 // @Produce      json
@@ -169,7 +170,7 @@ func (h *ProductHandler) DeleteOneProduct(ctx *gin.Context) {
 func (h *ProductHandler) UpdateOneProduct(ctx *gin.Context) {
 	var err error
 	var req types.ProductUpdateInput
-	var productId uuid.UUID = uuid.UUID([]byte(ctx.Param("id")))
+	var productId uuid.UUID = utils.ParseStringToUUID(ctx.Param("id"))
 	if err = ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{
 			"status":  "failed",
